# weshit

./: CMakeLists.txt
src/: main.cpp
